--- a/data_manipulation_with_dplyr.Rmd
+++ b/data_manipulation_with_dplyr.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Data Manipulation with dplyr"
 output:
-  html_document: default
+  github_document: default
   html_notebook: default
 ---
 
